rename message func

--- a/TODO
+++ b/TODO
@@ -1,5 +1,4 @@
-- add/remove devices
-- Non-poll based receiving
-- double check logging
-- finish trait for col, row, set_all
-- Maybe don't assume this is the only app, re-read the settings when asked
+- add/remove devices -- enumeration
+- find a way to change the port at which serialosc runs
+- rotation handling
+- re-query settings?
