--- a/TODO
+++ b/TODO
@@ -1,4 +1,1 @@
-- add/remove devices -- enumeration
-- find a way to change the port at which serialosc runs
-- rotation handling
-- re-query settings?
+- add/remove devices
